<h3>DotNetNuke Active Forums</h3>
<p class="Contributor">
	DotNetNuke&reg; <br />
	<a href=http://www.dotnetnuke.com>http://www.dotnetnuke.com</a><br />
</p>
<hr/>
<div class="License">
	<p class="Owner">
		<h3>About DotNetNuke Active Forums</h3>
		<strong>Version 5.0.3</strong><br /><br />		
		
	</p>
</div>
<h3>DotNetNuke Active Forums 05.00.03</h3>
<p class="Contributor">
	Will Morgenweck <br />
	Benjiro Nelson <br />
   Chris Hammond <br />
   Jay Mathis <br />
   Jason Brunken <br />
</p>
<hr/>
<div class="License">
   <h3>Release Notes</h3>
   <p class="Owner">
	<b>Version 05.00.03</b><br /><br />
	</p>
	<p>
		<ul>
			<li><a href="http://activeforums.codeplex.com/workitem/1778" target="_blank">Item 1778</a> - Migrate 6.2 MVC based web services to 7.0 WebAPI based web services</li>
		</ul>
	</p>
        <p class="Owner">
       <b>Version 05.00.02</b><br /><br />
   </p>
   <p>
        <ul>
            <li><a href="http://activeforums.codeplex.com/workitem/1746" target="_blank">Item 1746</a> - table missing clustered index</li>
            <li><a href="http://activeforums.codeplex.com/workitem/1725" target="_blank">Item 1725</a> - No apostrophe in topic title (topics view)</li>
			<li><a href="http://activeforums.codeplex.com/workitem/1600" target="_blank">Item 1600</a> - IE9 Attachment stop to 100% and not go ahead</li>
			<li><a href="http://activeforums.codeplex.com/workitem/1587" target="_blank">Item 1587</a> - Forum post time stamp incorrect</li>
			<li><a href="http://activeforums.codeplex.com/workitem/1640" target="_blank">Item 1640</a> - Active Topics render only first post</li>
        </ul>
    </p>
   <p class="Owner">
       <b>Version 05.00.00</b><br /><br />
   </p>
   <p>This initial release of Active Forums 5.0</p>
   
</div>